# shinyu-ai

./: ARCHITECTURE.md  COMPLETION_REPORT.md  Cargo.toml  DEVELOPMENT.md  FORTUNE_CONTENT_RESEARCH.md  MARKET_RESEARCH_REPORT.md  MEMORY_IMPLEMENTATION_SUMMARY.md  PRODUCT_CONCEPT_SUMMARY.md  README.md  ROADMAP.md  USER_GUIDE.md  fortune-database.yaml  implementation-guide.md
app/: .env.example  .eslintrc.json  AVATAR_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  README.md  README_AVATAR.md  jest.config.js  package.json  tailwind.config.ts
app/app/: globals.css  layout.tsx  page.tsx
app/docs/: AVATAR_GENERATION_GUIDE.md
app/src/: README.md
app/src/__tests__/: setup.ts
app/src/lib/: jwt-auth.ts
app/src/services/: avatar-generator.ts  speech-service.ts  (+4 more)
app/tests/: avatar-generator.test.ts
demo/: ai_image_prompts.md  fortune_engine.py  fortune_result.json
docs/: MEMORY_SYSTEM.md
docs/product/: README.md  api-service-selection.md  business-model-canvas.md  growth-strategy.md  mvp-definition.md  product-concept.md  product-detail.md  prototype-design.md  revenue-model.md  tech-stack.md
examples/: demo.rs  memory_usage.rs  sns_demo.rs  usage.rs
src/: character.rs  diagnosis.rs  dialogue.rs  lib.rs  llm.rs  main.rs  prompt.rs
src/memory/: embeddings.rs  mod.rs  service.rs  types.rs  vector_db.rs
src/sns/: auto_reply.rs  mod.rs  sentiment.rs  twitter.rs
src/speech/: mod.rs  realtime.rs  voicevox.rs  whisper.rs
tests/: character_tests.rs  diagnosis_tests.rs  memory_tests.rs
tools/: setup_voice.sh  voice_input.py
(+15 files in other folders)
